Improve SettingsPanel functionality
Improve SettingsPanel functionality, update Mockito dependency, add
Google API Key, add HTTPS compatibility for tests, fix two digit month
compatibility with TimeModuleTest.

--- a/.gitignore
+++ b/.gitignore
@@ -90,8 +90,11 @@ pip-log.txt
 # Sound Files
 AudioSample.wav
 AudioSample.flac
+AudioSample.wav.flac
 
+settings.properties
 twitter4j.properties
+syslog.log
 
 #############
 ## Gradle
