--- a/pom.xml
+++ b/pom.xml
@@ -38,29 +38,21 @@
             <name>project</name>
             <url>file:${project.basedir}/repo</url>
         </repository>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases><enabled>false</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>com.darkprograms.speech</groupId>
-            <artifactId>java-speech-api</artifactId>
-            <version>1.15</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/JARVIS-API.jar</systemPath>
-        </dependency>
         <dependency>
             <groupId>com.gtranslate</groupId>
             <artifactId>GTranslate</artifactId>
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/gtranslateapi-1.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>javaFlacEncoder</groupId>
-            <artifactId>javaFlacEncoder</artifactId>
-            <version>0.3.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/javaFlacEncoder-0.3.1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>javazoom</groupId>
@@ -98,6 +90,18 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
+        </dependency>
+
+        <!-- Sphinx Libraries -->
+        <dependency>
+            <groupId>edu.cmu.sphinx</groupId>
+            <artifactId>sphinx4-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.cmu.sphinx</groupId>
+            <artifactId>sphinx4-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
